; ModuleID = '/home/carl/AnghaBench/freebsd/sys/rpc/extr_clnt_vc.c_clnt_vc_upcallsdone.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/rpc/extr_clnt_vc.c_clnt_vc_upcallsdone.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ct_data = type { i64, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"rpcvcup\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ct_data*)* @clnt_vc_upcallsdone to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clnt_vc_upcallsdone(%struct.ct_data* %0) #0 {
  %2 = alloca %struct.ct_data*, align 8
  store %struct.ct_data* %0, %struct.ct_data** %2, align 8
  %3 = load %struct.ct_data*, %struct.ct_data** %2, align 8
  %4 = getelementptr inbounds %struct.ct_data, %struct.ct_data* %3, i32 0, i32 1
  %5 = load %struct.TYPE_2__*, %struct.TYPE_2__** %4, align 8
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = call i32 @SOCKBUF_LOCK_ASSERT(i32* %6)
  br label %8

8:                                                ; preds = %13, %1
  %9 = load %struct.ct_data*, %struct.ct_data** %2, align 8
  %10 = getelementptr inbounds %struct.ct_data, %struct.ct_data* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = icmp sgt i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %8
  %14 = load %struct.ct_data*, %struct.ct_data** %2, align 8
  %15 = getelementptr inbounds %struct.ct_data, %struct.ct_data* %14, i32 0, i32 0
  %16 = load %struct.ct_data*, %struct.ct_data** %2, align 8
  %17 = getelementptr inbounds %struct.ct_data, %struct.ct_data* %16, i32 0, i32 1
  %18 = load %struct.TYPE_2__*, %struct.TYPE_2__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %18, i32 0, i32 0
  %20 = call i32 @SOCKBUF_MTX(i32* %19)
  %21 = call i32 @msleep(i64* %15, i32 %20, i32 0, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 0)
  br label %8

22:                                               ; preds = %8
  ret void
}

declare dso_local i32 @SOCKBUF_LOCK_ASSERT(i32*) #1

declare dso_local i32 @msleep(i64*, i32, i32, i8*, i32) #1

declare dso_local i32 @SOCKBUF_MTX(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
